@@ -1,4 +1,6 @@
 Version 0.4.5 (?? ??? ????)
+ - CalendarPanel bug fix: After pressing the "Today" button, the scrollbar values
+   were no longer accurate.
  - Modified CalendarPanel to handle more events per day.  Instead of just not displaying
    events that don't fit, it will now use multiple columns to fit all the day's events.
  - Modified CalendarPanel to not use Swing's internal ToolTip functionality and replaced
